[project]
name = "fal-ai-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VirtuOasis", email = "kitchenbyomakase@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "fal_client>=0.5.9",
    "python-dotenv>=0.15.0"
]

[project.scripts]
pypi-mcp = "pypi_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
